# inspection-robot

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  README.md  TODO.md
src/agv_driver/: CLAUDE.md  CMakeLists.txt  README.md  package.xml
src/agv_driver/config/: agv_driver.yaml
src/agv_driver/docs/: AGV_API_SELECTION.md  AGV_DRIVER_ARCHITECTURE.md  PROJECT_RELATION_AND_AGV_TASKS.md
src/agv_driver/docs/agv_api/: API.md
src/agv_driver/docs/agv_api/API/: TCP-IP API.md
src/agv_driver/docs/agv_api/API/TCP-IP API/: API使用教程.md  API概览.xlsx  其他API.md  机器人导航API.md  机器人控制API.md  机器人推送API.md  机器人状态API.md  机器人配置API.md  概述.md  附录.md
src/agv_driver/docs/agv_api/API/TCP-IP API/其他API/: Replay.md  上传音频文件.md  下载音频文件.md  从所有料箱解绑货物.md  从指定料箱解绑货物.md  停止扫描地图.md  停止播放音频.md  停止货叉.md  写入modbus数据.md  写入外设用户自定义数据.md  取消标定.md  库位检测.md  开始扫描地图.md  开始标定.md  批量设置 DO.md  播放音频.md  暂停播放音频.md  更新透传数据.md  标定过程可视化.md  清除载货状态.md  牵引上料.md  牵引下料.md  电机使能与去使能.md  绑定货物到料箱.md  继续播放音频.md  获取当前标定结果.md  获取音频文件列表.md  解绑指定货物.md  设置 DO.md  设置充电继电器.md  设置继电器.md  设置虚拟 DI.md  设置货叉高度.md  辊筒(皮带)停止.md  辊筒(皮带)前上料.md  辊筒(皮带)前下料.md  辊筒(皮带)前后反向.md  辊筒(皮带)前预上料.md  辊筒(皮带)右上料.md  辊筒(皮带)右下料.md  (+16 more)
src/agv_driver/docs/agv_api/API/TCP-IP API/机器人导航API/: 启用和禁用线路.md  圆弧运动.md  平动.md  托盘旋转.md  执行预存任务链.md  指定路径导航.md  暂停当前导航.md  查询机器人任务链.md  查询机器人所有任务链.md  根据任务id清除指定导航路径.md  获取路径导航的路径.md  转动.md
src/agv_driver/docs/agv_api/API/TCP-IP API/机器人控制API/: 上传并切换载入地图.md  切换载入的地图.md  取消重定位.md  电机编码器标零.md  确认定位正确.md  称重传感器标零.md  重定位.md
src/agv_driver/docs/agv_api/API/TCP-IP API/机器人状态API/: 上传机器人文件.md  下载手柄自定义绑定事件.md  下载机器人文件.md  下载机器人模型文件.md  仿真从文件识别.md  停止氛围灯脚本.md  停止电池外置脚本.md  机器臂示教器面板控制.md  机械臂binTask任务.md  机械臂运动控制.md  查询 RFID 数据.md  查询 TCP 客户端信息.md  查询GNSS设备列表.md  查询GNSS连接状态.md  查询modbus数据.md  查询二维码数据(PGV).md  查询代价地图.md  查询任意两点之间的路径.md  查询传感器信息.md  查询历史控制权信息.md  查询建图时的3D二维码.md  查询当前播放音频名称.md  查询当前识别相机的点云图片.md  查询批量数据1.md  查询批量数据2.md  查询批量数据3.md  查询指定地图列表的MD5值.md  查询控制器抱闸状态.md  查询机器人 I-O 数据.md  查询机器人 IMU 数据.md  查询机器人任务列表.md  查询机器人位置.md  查询机器人信息.md  查询机器人参数.md  查询机器人地图载入状态.md  查询机器人当前所在区域.md  查询机器人当前载入地图中的站点信息.md  查询机器人扫图状态.md  查询机器人报警状态.md  查询机器人支持标定列表.md  (+31 more)
src/agv_driver/docs/agv_api/API/TCP-IP API/机器人配置API/: 3D二维码建图.md  上传地图到机器人.md  上传手柄自定义绑定事件.md  上传机器人脚本.md  上传模型文件到机器人.md  下载机器人脚本.md  (+34 more)
src/agv_driver/docs/agv_api_required/: PORT_ROUTING.md  README.md
src/agv_driver/docs/agv_api_required/01_bootstrap/: 查询当前控制权所有者.md
src/agv_driver/docs/agv_api_required/02_navigation/: 取消当前导航.md  清除指定导航路径.md  继续当前导航.md  路径导航.md
src/agv_driver/docs/agv_api_required/03_status/: 机器人推送.md  查询机器人任务状态.md  查询机器人定位状态.md  查询机器人导航状态.md  查询机器人急停状态.md  查询机器人的被阻挡状态.md  配置机器人推送端口.md  配置机器人推送端口_4091.md
src/agv_driver/docs/agv_api_required/04_recovery/: 停止开环运动.md  开环运动.md  软急停.md
src/agv_driver/include/agv_driver/: agv_client.hpp  agv_transport.hpp
src/agv_driver/launch/: agv_driver.launch.py
src/agv_driver/src/: agv_client.cpp  agv_driver_node.cpp  agv_transport.cpp
src/arm_controller/: CLAUDE.md  CMakeLists.txt  package.xml
src/arm_controller/config/: arm_controller.yaml
src/arm_controller/elfin_core/elfin_basic_api/: CMakeLists.txt  package.xml
src/arm_controller/launch/: arm_controller.launch.py
src/arm_controller/src/: arm_controller_node.cpp
src/arm_driver/: CLAUDE.md  CMakeLists.txt  README.md  package.xml
src/arm_driver/config/: arm_driver.yaml
src/arm_driver/docs/: arm_driver_design.md
src/arm_driver/elfin_core/: README.md
src/arm_driver/elfin_core/elfin_ethercat_driver/src/: elfin_ethercat_driver.cpp
src/arm_driver/elfin_core/soem_ros2/SOEM/: CMakeLists.txt
src/arm_driver/include/arm_driver/: arm_driver_node.hpp
src/arm_driver/launch/: arm_driver.launch.py
src/arm_driver/src/: arm_driver_node.cpp  arm_driver_node_core.cpp  arm_driver_node_ros.cpp
src/defect_detector/: CLAUDE.md  CMakeLists.txt  package.xml
src/defect_detector/launch/: defect_detector.launch.py
src/defect_detector/src/: defect_detector_node.cpp
src/elfin_sdk/elfin_ethercat_driver/: CMakeLists.txt
src/elfin_sdk/elfin_ethercat_driver/src/: elfin_ethercat_client.cpp
src/inspection_gateway/: CLAUDE.md  package.xml  setup.cfg  setup.py
src/inspection_gateway/inspection_gateway/: main.py
src/inspection_gateway/inspection_gateway/api/: __init__.py  app.py  deps.py  models.py
src/inspection_gateway/inspection_gateway/api/routes/: cad.py  captures.py  media.py  nav.py  plans.py  targets.py  tasks.py
src/inspection_gateway/inspection_gateway/api/ws/: handler.py  protocol.py
src/inspection_gateway/inspection_gateway/domain/: __init__.py  converters.py  runtime.py
src/inspection_gateway/inspection_gateway/frontend/: README.md
src/inspection_gateway/inspection_gateway/ros/: __init__.py  bridge.py  state_hub.py
src/inspection_gateway/inspection_gateway/rpc/: __init__.py  converters.py  proto_loader.py  server.py  servicer.py
src/inspection_gateway/inspection_gateway/store/: __init__.py  cad_store.py  media_store.py
src/inspection_gateway/launch/: inspection_gateway.launch.py
src/inspection_interface/: CLAUDE.md  CMakeLists.txt  package.xml
src/inspection_interface/msg/: AgvStatus.msg  ArmStatus.msg  DefectInfo.msg  InspectionResult.msg  InspectionTask.msg  RobotPose.msg  SystemState.msg
src/inspection_interface/srv/: GetInspectionStatus.srv  GetNavMap.srv  MoveToPose.srv  PauseInspection.srv  PlanInspection.srv  ResumeInspection.srv  StartInspection.srv  StopInspection.srv
src/inspection_supervisor/: CLAUDE.md  CMakeLists.txt  package.xml
src/inspection_supervisor/src/: supervisor_node.cpp
src/path_planner/: CLAUDE.md  CMakeLists.txt  package.xml
src/path_planner/launch/: path_planner.launch.py
src/path_planner/src/: path_planner_node.cpp
src/pose_detector/: CLAUDE.md  CMakeLists.txt  package.xml
src/pose_detector/launch/: pose_detector.launch.py
src/pose_detector/src/: pose_detector_node.cpp
src/realsense_driver/: CLAUDE.md  CMakeLists.txt  README.md  package.xml
src/realsense_driver/config/: realsense.yaml
src/realsense_driver/launch/: realsense.launch.py
src/realsense_driver/realsense2_camera/: CMakeLists.txt
(+58 files in other folders)
